docs/specs/stop-generation/v5/spec.md
# 這份文件怎麼讀

這一輪修的是**兩個既有 bug**：按下「停止生成」之後，(1) 已經生成的文字被一段錯誤訊息整個蓋掉，(2) 那次對話不會被存檔。兩者出自同一段程式，也由同一個問題定義正確行為：**按下停止之後，這段對話應該留下什麼。**

- **QA 主要看**「正確行為」與「任務拆解」兩節 —— 每條都寫成可判 pass/fail 的情境。
- **RD 主要看**「診斷」「正確行為」「修正範圍」「明確不做」「已知衝突與邊界情況」。
- **使用者看** `spec-decisions.md`：**目前 0 項待決** —— 本功能的規則（S1）、規格的寫法（S2）、換環境後要不要重跑（S3）都已拍板。三項的選項與代價都在 `spec-appendix.md`／決策歷程。
- **QA 冷讀時要先知道一件事**：這份規格上一次通過全驗是在**實機**上，而驗收環境此後改成模擬器，使用者裁決**不重跑**。因此 **R3（停止之後那則回覆不再變動）與任務 2 驗收 3 在模擬器上從來沒有被驗過** —— 它們若判 fail，先讀 R3 底下那段註記再決定怎麼歸類。
- **「對 conversation-search 的影響」那一節現在是記錄**：那一輪的 PM 已經取用完畢，兩份文件之間不再有互相矛盾的宣稱。
- 決策歷程、已知取捨、參考資料在 `spec-appendix.md`。
- **每一輪改了哪些、那一輪要做哪些**：slug 根目錄（本目錄的上一層）的 `changes-v<版本>.md`，最新的一份是 `changes-v5.md`（**本輪 RD 與 QA 都是 0 個任務**，理由逐條寫在那裡）。

## 代號索引

| 代號 | 一句話 |
|---|---|
| **B1** | bug 一：停止後，部分回覆被「出錯了：…」整個取代 |
| **B2** | bug 二：按停止的那一次不會寫進儲存體 |
| **R1–R11** | 修好之後必須成立的可觀察行為，見「正確行為」 |
| **S1** | 停止後要不要留下看得見的中斷標記。**已拍板：要，標記文字見 R2。** 選項與代價的完整記錄在 `spec-appendix.md`／決策歷程 |
| **S2** | （v3 升級，**已拍板**）之後的規格要不要禁止「QA 驗不到的過程條文」。**結論：不禁止，但條文本身要寫清楚由誰執行、QA 驗得到什麼、驗不到什麼。** 選項、代價與裁決在 `spec-appendix.md`／決策歷程 |
| **S3** | （v4 升級，**已拍板**）驗收環境改成模擬器之後，v3 那些在實機上通過的裝置端驗收要不要重跑。**結論：不重跑，v3 的結論原樣沿用；往後只有程式再被動到時才重驗。** 選項、代價與「代價寫在哪裡會被撞到」在 `spec-appendix.md`／決策歷程 |

> **R1–R11 與任務 1–5 全部是確定的、可判 pass/fail 的，沒有任何一條在等人。** S2 影響的是下一輪怎麼寫條文；S3 決定的是「已經 pass 的裝置端驗收不在新環境重跑」。**兩者都不改變任何一條規則，也不改變任何一條驗收怎麼判** —— S3 改變的只有「那些結論是在哪個環境取得的」，而那件事已經寫在會撞到它的地方（R3、任務 2 驗收 3、已知衝突第 2 條）。

## 目前狀態（v5）

**R1–R11 與任務 1–5 都已實作，並通過一次全驗。** 那份報告留在它驗的那一版：`../v3/test-report.md`（**每一輪的驗證報告都留在它驗的那個版號目錄裡，不隨 spec 複製到新版**）。

**那次全驗是 2026-09-09 在 Pixel 9 實機上做的，而驗收環境此後改成了模擬器。S3 已拍板：不重跑**（`spec-appendix.md`／決策歷程「已拍板：S3」）。所以本規格現在的狀態是：

- **每一條規則都仍然有效、每一條驗收都仍然照原文判 pass/fail** —— S3 沒有放寬任何東西。
- **但裝置端那些條文的「通過」是在實機上取得的**，模擬器上沒有人再跑過一次。**其中只有一條會因為換裝置而可能翻面**：R3（與任務 2 驗收 3），因為它守的是一個對生成速度敏感的時序競爭。**那一條旁邊寫了 fail 時怎麼歸類**，不要只看這裡。
- **下一次重驗的觸發條件**：程式再被動到的時候。

**v5 沒有新增、也沒有改動任何一條規則，也沒有任何實作改動。** 這一輪只做一件事：**落實 S3 的裁決**（移進決策歷程、`spec-decisions.md` 回到 0 項待決），並把使用者知情接受的那個代價寫進**下一個人會撞到它的三個位置**：R3、任務 2 驗收 3、「已知衝突與邊界情況」第 2 條。哪幾節被動過，見 `changes-v5.md`。

**（歷史）v4**：沒有規則改動。修掉指不到的跨文件引用、把條文裡的「實機」字面與一條預設生成速度的前置改成不依賴裝置的說法、S2 拍板為 (B)，並升級了 S3。見 `changes-v4.md`。

**（歷史）v3**：全驗 pass，沒有任何規則被新增或改動；只補實測事實、換掉會腐爛的引用（寫死的行號與測試支數）、記下 QA 打回的條文寫法問題並升級 S2。見 `changes-v3.md`。

---

# 現象

（以下兩段照 `findings.md` 原樣保留，未改寫。重現步驟見 `../findings.md`／「重現步驟」，含 adb 指令。**`findings.md`、`changes-v<N>.md`、`pm-inbox.md` 都在 slug 根目錄，也就是本目錄的上一層** —— v4 起本規格一律寫成 `../findings.md`，舊版寫的 `../stop-generation/findings.md` 是一個從版號目錄出發解不開的路徑。）

## B1 部分回覆被錯誤訊息取代

停止之後，畫面上原本正在串流的那則回覆**整則變成**：

```
出錯了：StandaloneCoroutine was cancelled
```

已經生成出來的文字全部消失。使用者按停止的意圖是「就到這裡」，得到的卻是「這次失敗了」。

## B2 按停止的那一次不會存檔

停止之後那段對話**不會被寫進儲存體**。實測：一段有內容的對話（開場白 + 使用者訊息 + 回覆）在按下停止後，`files/conversations/` 的檔案數完全沒有增加。

內容仍在記憶體裡，所以畫面看起來正常；直到後續某個動作（切換對話等）才會被存下來。**如果在那之前 App 被關閉，那次對話就消失了。**

---

# 診斷

**我自己讀過程式碼，確認 `../findings.md` 的兩項診斷都成立。** 兩者都在 `app/src/main/java/com/example/demo/chat/ChatViewModel.kt` 的送出路徑與停止路徑上。

> **這一節描述的是修正前的程式。** 修好之後那段程式的形狀已經不同，照這裡的敘述去現行程式碼裡找「接住所有例外的區塊」不會找到同樣的東西 —— 這是預期的，不是文件過期。

## B1 成立

- 停止會取消那個正在串流的工作；取消丟出的例外，被回覆流程**唯一那個接住所有例外的區塊**接住，於是整則回覆被覆寫成 `"出錯了：${e.message}"`。
- 這條路成立的關鍵事實：**取消用的例外在這個平台上是一般例外的子型別**（`kotlin.coroutines.cancellation.CancellationException` 在 JVM 上就是 `java.util.concurrent.CancellationException`，繼承鏈通到 `Exception`），所以「接住所有例外」必然也接住取消。回報看到的字串 `StandaloneCoroutine was cancelled` 正是這個例外自己的訊息 —— 這是症狀與這段程式對得上的直接證據。
- `stop()` 自己做的「把還在生成的標記關掉」和這次覆寫是同一批狀態更新的前後兩次，**不論誰先誰後，最後留在畫面上的都是錯誤字串**（若覆寫在後，它蓋掉標記；若覆寫在前，`stop()` 就找不到還在生成的訊息可關）。所以 B1 與時序無關，是穩定重現的。

## B2 成立

- 存檔寫在同一個 `try` 的收尾區塊，而**存檔本身是個會掛起的呼叫**。在一個已經被取消的工作裡，收尾區塊會執行，但其中的掛起呼叫會立刻再次以取消結束、不做事。
- 同一個收尾區塊裡的「重新載入歷史」也一樣沒跑到。所以按停止的那一次，寫檔、記住工作階段之後的那幾步全部沒有發生。

## 兩者為什麼必須同一輪修

B1 讓 B2 幾乎不可能被發現（畫面上「有東西」，使用者不會懷疑它沒被存下來），而且 B2 修好之後「要存下什麼」的答案，正是 B1 要定義的東西。分開修，第二輪會被第一輪的決定綁住。

## 順帶查證的兩件事（會影響正確行為怎麼寫）

- **停止時留下的文字沒有經過「權威解碼」。** 串流片段只保證可以拿來顯示：引擎逐片段解碼，一個多位元組字元被切在兩個片段之間就會壞掉；真正正確的版本是串流結束時那一份一次解碼的完整字串。**使用者停止時，那份完整字串永遠不會抵達。** 所以停止能留下的最好結果，就是「按下停止那一刻畫面上已經顯示的文字」—— 不會更好，也不該更差。這是 R2 那樣寫的原因。
- **兩種自動中斷走的不是取消這條路。** 長度上限與重複迴圈是讓串流自然收束，不是取消整個工作，所以它們不經過那個接住例外的區塊。**本輪的修正不應該碰到它們**，這也讓 R8 成為一條真正的回歸驗收，而不是形式。

---

# 這是不是 bug

**B1 是 bug，而且是規格早就寫過、實作沒做到的那一種。** 專案層級架構文件 `plan/architecture.html` 在「幾條刻意維持的規則」那一節裡，把「按下停止不算一次內容更新」寫在「最後更新時間只跟著內容走」那一條的「不算」那一側（**這是本輪修正前的狀態**，該處已由任務 5 改掉）；`conversation-search` 的 `spec.md` §8.2 第三點也寫著同一件事。兩份文件都假定停止只會關掉「還在生成」的標記 —— **那個假定對現行程式不成立。** 沒有任何一份文件說過「停止要顯示錯誤訊息」。

**B2 是 bug，而且是資料遺失。** 使用者按停止之後把 App 關掉，那段對話就沒了。專案其他每一條會改變內容的路徑後面都跟著一次寫檔，只有這一條沒有。

**但有一塊不是 bug，是規格從來沒規範過的：停止之後要不要留下一個看得見的「已中斷」標記。** 現行程式對兩種**自動**中斷（長度上限、重複迴圈）會在文字結尾加上標記；**手動**停止要不要一致，兩份文件都沒寫過，程式也沒真的做過選擇（它掉進錯誤處理裡了）。這一塊是需求，不是 bug —— 所以我把它獨立成 **S1 交給使用者裁決**，而不是自己選一個混進 bug 修正裡。

**S1 已裁決：要加標記**（見 R2）。因此上一段提到的那兩處文件敘述（`plan/architecture.html` 那條刻意維持的規則、`conversation-search` §8.2 第三點）**不是修好之後就會自動變成真的，而是必須跟著改** —— 前者由本輪任務 5 執行，後者的結論寫在「對 conversation-search 的影響」交給那一輪的 PM。**兩處都已完成**（前者見 `test-report.md` 的任務 5，後者由那一輪自己執行，見「已知衝突與邊界情況」第 5 條的現行狀態）。裁決的選項與代價記在 `spec-appendix.md`／決策歷程。

---

# 正確行為

**每一條都是可判定的，沒有任何一條在等裁決。**（v2：R2 與 R11 原本各有兩支，S1 拍板後收斂成單一結論。）

**共同前置（除非另外註明）**：任一 persona、任一模型、引擎已就緒；開一段新對話，送出 `tell me a long story about a cat`（或任何會產生較長回覆的訊息），**在那則回覆已經顯示出至少一個字、而且還沒有自然結束的時候**，按下輸入列右側的停止鈕。

> **（v4 措辭修正，要驗的東西一個字都沒有變）** 這個前置原本寫「在回覆開始串流後 **3–5 秒內**」。那個秒數預設了生成速度，而**生成有多快取決於驗收裝置**；這幾條真正依賴的是一個**狀態** —— 停止當下畫面上已經有文字。改成狀態之後，裝置快或慢都產得出這個情境。零文字的那一種情境由 R4 自己的前置定義（在出現任何一個字之前按下停止），兩者互補，沒有第三種。**3–5 秒仍然是個好用的參考值，但它不是判定的一部分。**

### R1 停止不是錯誤

停止之後，那則回覆的文字**不得包含任何錯誤字樣**。具體可判定：不得以「出錯了」開頭，不得包含 `cancel` / `Cancel` / `Exception` / `Job` / `Coroutine` 任一子字串，也不得包含任何非使用者、非模型產生的英文例外描述。

### R2 留下的是「按下停止那一刻畫面上的文字」+ 一個固定的中斷標記

**（S1 已拍板為「加標記」。）**

- 停止之後那則回覆的文字，**必須完全等於**：〔按下停止前一刻畫面上顯示的那則回覆文字〕直接接上〔中斷標記〕。
- **中斷標記的具體字串**：一個刪節號字元，接著 `（已停止）`（全形括號）。整串共 6 個字元。**那個刪節號必須與現行 `…（已達長度上限）` 開頭的字元是同一個字元**（單一個刪節號字元，不是三個半形句點）。
  - 留刪節號的理由：現有兩個中斷標記（`…（已達長度上限）`、`…（模型卡在重複迴圈，已中斷）`）都是這個形狀，刪節號本身就在說「話沒說完」。使用者指定的是括號裡的字，格式一致性由本規格定死，讓它可判定。
- **標記直接接在已顯示文字的最後一個字元之後，中間不得插入空白、換行或任何其他字元。**
- **除了結尾追加的這 6 個字元以外，前面的文字一字不得改變**：不得重新排版、不得截斷、不得補完、不得把已顯示的文字換成別的版本、不得去除尾端空白。
- 停止當下**還沒有任何文字**時不適用本條，走 R4（那則回覆整個不留下）—— **不得**產生一則內容只有 `…（已停止）` 的回覆。
- 判定方式：按停止前對畫面截圖，與停止後的文字逐字比對；停止後的文字必須是截圖內容加上那 6 個字元。

### R3 停止之後那則回覆不再變動

停止後 5 秒內：
- 該則回覆的文字**不得再改變**（不得再多出新的字）。
- 該則回覆**不得停留在「還在生成」的樣子** —— 不得顯示打字指示器，輸入列右側**必須**已經回到送出鈕（不是轉圈的停止鈕）。

> **（v5）這一條的結論是在哪個環境取得的 —— 冷讀判 fail 之前先讀這段。**
> R3 唯一一次在裝置上被驗過，是 **2026-09-09 在 Pixel 9 實機上**（`../v3/test-report.md`）。驗收環境此後改成模擬器，而 **S3 已拍板為「不重跑」**（`spec-appendix.md`／決策歷程「已拍板：S3」）。使用者知情接受的代價原文是：**停止與串流最後一次寫入之間的時序競爭（見「已知衝突與邊界情況」第 2 條）在模擬器上從來沒有被看過；模擬器的推論速度與實機不同，勝負可能是反過來的。**
> - **這段不放寬 R3 的判定**：條文一個字都沒有改，fail 就是 fail。
> - **它改變的只有「fail 要怎麼回報」**：如果本輪沒有人動過程式，而 R3 在模擬器上出現「停止後文字又多了一小段」或「打字指示器不消失」，**先回報成「環境差異：R3 在模擬器上是第一次被驗」**，不要寫成「本輪改壞的東西」—— 這個競爭一直都在，只是沒有人在這個速度的裝置上看過它。

### R4 停止時還沒有任何文字

- 前置：送出訊息後，在回覆出現任何一個字**之前**按下停止（可在模型仍在載入、或畫面仍是打字指示器時按）。
- 預期：**不得留下一則空白的回覆泡泡**。那則還沒有內容的回覆不留下；使用者剛送出的那則訊息**必須**留著。
- **這一條的內容不因 S1 拍板而改變**，但拍板之後它多守住一件事：既然 R2 要追加標記，就必須明講「零文字時不是追加標記，而是整則不留」。**空白泡泡與「內容只有 `…（已停止）`」的泡泡都不是可接受的結果** —— 一個孤零零的標記傳達不了任何使用者還不知道的事。

### R5 停止當下就必須落盤

- 操作：照共同前置按下停止，**接著不做任何其他操作**。
- 預期一（檔案）：`adb shell run-as com.example.demo ls files/conversations | wc -l` 的結果，比送出訊息前**多 1**（若這段對話先前已存過檔則不變，但檔案內容必須已含這次的部分回覆）。
- 預期二（更強、以它為準）：停止後立刻強制停止 App（`adb shell am force-stop com.example.demo`）再開啟，**該段對話必須還在，且其中那則部分回覆的文字與停止時相同**。
- 這一條就是 B2 的驗收，**不受 S1 影響**。

### R6 落盤的必須是「被停止的那一段」

- 操作：在串流途中直接從抽屜切換到另一段既有對話（切換會隱含觸發停止）。
- 預期：被切走的那段對話，其檔案內容含有停止當下的部分回覆；**被切入的那段對話的檔案不得被改動**（比對切換前後該檔案的位元組，必須完全相同）。
- 為什麼要單獨列：修好 B2 之後，停止會在一個不完全可預測的時機補寫一次檔；若那一次寫的是「當時開著的那段對話」而不是「被停止的那段對話」，就會寫錯對象。**這是本輪的修正最可能誤傷的地方。**

### R7 真正的失敗維持現狀

生成因為**推論本身失敗**（不是使用者停止）而結束時，行為**與本輪修正前完全相同**：該則回覆顯示「出錯了：…」加上失敗訊息，並照原本的方式收尾。**修正只能把「使用者停止」從錯誤這條路上拿掉，不得順手改掉真正的錯誤怎麼呈現。**

### R8 兩種自動中斷維持現狀

- 回覆撞到 800 字元上限時，結尾仍是 `…（已達長度上限）`。
- 模型卡進重複迴圈時，重複的尾巴仍被收短，**收短的程度與本輪修正前完全相同**；結尾仍是 `…（模型卡在重複迴圈，已中斷）`。
- **這兩段文字一字不得改。**

> **（v3 措辭修正，行為要求沒有變）** 上面第二點原本寫「收成**兩輪**」。那個數字是抄自架構文件與程式註解的敘述，而它與實作不符：把 `abababab` 放進那塊邏輯逐步推過，得到的是 `ababab`（保留三輪），與 QA 手算的結果一致。本條真正依賴的性質只有「與修正前相同」，多出來的那個數字不承擔任何重量，卻是一個可以被推翻的地方，所以拿掉。**收短的行為本身一個字都沒有改，也不准改。** 那個文件／註解與實作不符的問題怎麼處置，見「明確不做」。

### R9 停止之後可以立刻再說話

停止之後，輸入列必須立刻可以送出下一則訊息，且送出後能正常得到回覆（不需要等待、不需要切換對話、不需要重開 App）。

### R10 由切換隱含觸發的停止，行為與手動停止一致

在串流途中切換人格、切換模型、切換對話、開新對話 —— 被切走的那段對話**必須**留下 R2 所定義的部分文字（而不是錯誤訊息），並且**必須**已經落盤（R5 的判定方式同樣適用）。

### R11 最後更新時間（本條與 `conversation-search` 共用，見下一節）

**按下停止必須推進這段對話的最後更新時間，而且是無條件的。** 停止當下只有兩種可能，兩種都改變了內容：

| 停止當下 | 發生什麼 | 為什麼算一次更新 |
|---|---|---|
| 已經有文字 | 追加 `…（已停止）`（R2） | 訊息的文字改變了 |
| 還沒有文字 | 那則空回覆被移除（R4） | 訊息被移除了 |

- **不需要寫成「除了…之外」。** 「除外」的寫法只有在不加標記的那一支底下才需要（有文字時內容不變、零文字時內容變），而那一支沒有被採用。**這一節與下一節都不得留下任何形式的例外條款** —— 留著一個不存在的例外，下一輪會有人照它寫出一條驗不出東西的條文。
- **與 S1 無關、仍然成立的事實**：串流期間每寫進一段文字就已經推進過一次時間，所以「停止那一刻」與「最後一個字出現」之間的時間差是次秒級的。**任何以秒為單位的計時判定都分不出「停止有沒有推進時間」** —— 能分出來的可觀察物是那則回覆的文字（見下一節對 §8.6 的建議）。

> **（v4）這一條由哪一層守、為什麼本規格不給它獨立的驗收條文。** 本輪反向核對「正確行為」整節時，R11 是唯一一條在任務清單裡找不到對應驗收的規則 —— 這是刻意的，寫在這裡讓下一輪的人當場看得到它已經被決定過，不必重推一次：
> - **時間那一半在本規格裡分不出來。** 前進發生在按下停止的當下，與串流最後一次寫入相隔次秒級；寫一條以秒為單位的判定，它在「停止有推進」與「停止沒推進」兩種實作底下都會通過。**那會是一條看起來有在守、實際上抓不到任何東西的條文**，正是本規格反覆記錄的那一型失效。
> - **內容那一半已經被守住了，而它正是 R11 的全部前提。** R11 的論證只依賴上表兩列：有文字時追加標記（**任務 2 驗收 2** 逐字驗那 6 個字元與前文未變）、零文字時整則不留下（**任務 2 驗收 4**）。這兩條成立，R11 在 §8.1 底下就必然成立；這兩條若壞了，R11 的前提也就壞了。
> - **跨輪那一半**：「停止之後的切換不得再蓋掉時間」由 `docs/specs/conversation-search/spec.md` §8.6「可判定（停止之後的切換不得再推進時間）」守，那一條的預期一驗的就是 R2 那個字串。**本規格不重寫它**，理由見下一節。

---

# 對 conversation-search 的影響

**（v3 現行狀態：這一節已經被取用完畢，沒有人還在等它。）** 那一輪自己的規格已經照下面的結論改完，兩份文件之間不再有互相矛盾的宣稱。**這一節從現在起是記錄** —— 留著是為了讓日後想知道「那幾條規則為什麼會那樣改」的人找得到理由。

**這一節原本是為 `conversation-search` 那一輪的「決策 C」準備的。S1 已拍板，所以下面全部是單一結論，他們的 PM 可以直接取用；我沒有、也不會去動他們目錄下的任何檔案。**

> **（v4 重要）這一節裡的 §8.1／§8.2／§8.6／§G.3 是他們取用這些結論「當時」的節號，不是現況。** 取用之後那份 spec 又動過：**§8.2 第三點已經照本節所要求整條移除**（所以現在去那裡找它是找不到的 —— 那是預期的結果，不是引用壞掉），**§G.3 整條搬進了 `docs/specs/conversation-search/spec-tasks.md`／「明確不做」**。**這一節是記錄，不要拿它去對照對方文件的現況**；要看現況，讀「已知衝突與邊界情況」第 5 條，以及 `spec-appendix.md`／參考資料的跨輪相依那一列。

**一句話的答案（他們的決策 C 要的就是這個）：停止生成從此**算**一次更新，而且是無條件的。**

## 一、§8.2 第三點：把那一行移除，不要改寫成肯定句

**結論：把 §8.2 的第三點（「停止生成：把『還在生成』這個標記關掉，本身不算一次更新 —— 生成期間最後一個字出現時就已經記過一次了」）整條移除，連同它下面那段「已知矛盾、待裁決」的引言區塊一起移除。**

三個理由，依序：

1. **不能原地改成肯定句。** §8.2 那一節的標題是「不算一次更新」，開頭寫「下列動作**不得**讓任何一段對話的最後更新時間前進」。在那張清單裡放一條「算一次更新」會讓標題與內容互相矛盾 —— 那是把一個矛盾換成另一個矛盾。
2. **移除之後不會留下缺口。** §8.1 已經列舉「任何一則訊息的文字改變」與「任何一則訊息被移除」，而停止當下必然落在其中之一（見 R11 的表）。所以移除是「讓它回歸一般規則」，不是「不再規範它」。
3. **它本來就不是原則，是舉例。** §8.2 列的是「哪些動作不改內容」；停止被列進去的前提是「停止只會關掉標記」。R2 讓那個前提變成假的 —— **線沒有移動，是「停止生成」這件事從線的一邊換到另一邊。** 使用者先前對「時間只跟著內容走」的裁決一個字都沒有被推翻。

## 二、§8.1：規則不必改；建議加一句純澄清的補寫

**§8.1 的規則本身完全不必改。** 「錯誤訊息寫入必須讓時間前進」仍然對（真正的失敗維持現狀，見 R7）；本輪改變的是**哪些情況算錯誤** —— 使用者停止從此不再是錯誤（R1）。§8.1 與 §8.2 的矛盾因此消失：矛盾的成因是「停止被當成錯誤」這個實作缺陷，不是兩條規則本身衝突。

**但我建議他們加一句，理由是讀者體驗而不是正確性**：§8.2 曾經明寫過「停止生成」，一旦整條移除，**「刻意移除」與「不小心漏掉」在讀者眼中是分不出來的**。§8.1 第二項後面的括號本來就是列舉（「串流每寫進一段、結尾以完整版本覆寫、錯誤訊息寫入」），把「使用者按下停止時追加的中斷標記」加進同一個括號是它最自然的位置，而且不改變任何一條判定的結果。

**這是建議，不是要求 —— 加或不加由他們的 PM 判斷。** 唯一的硬性要求是：**不論加不加，都不得寫出與 R4 衝突的說法**（停止時零文字的那一則不是「文字改變」而是「訊息被移除」，兩者在 §8.1 底下都算更新，但不是同一項）。

## 三、§8.6：節名與判定方式都要換，替代條文可以直接抄

**現行 §8.6 的問題有兩層**，第二層是 S1 拍板後才出現的：

- **判定分不出東西**（他們自己已經發現）：現行判定是「按停止後等 30 秒再切換，存檔時間應比切換時刻早 ≥30 秒」，而不論停止有沒有推進時間，這個判定都會通過 —— 因為推進發生在按下停止的當下，同樣早於切換 30 秒。**我這一輪補上的是原因**：時間差是次秒級的（R11 末項），**任何以秒為單位的判定都分不出來；能分出來的可觀察物是那則回覆的文字**，而 R2 給了一個具體可驗的字串。
- **節名現在是假的**：「§8.6 可判定（**停止生成不算**）」的括號在 S1 拍板後不成立。

**建議的替代條文（可直接抄，我把它寫成他們的格式）：**

> **§8.6 可判定（停止之後的切換不得再推進時間）。**
> - 前置：在回覆串流途中按下停止，且**停止當下那則回覆畫面上已經有文字**（不是零文字的情況）。
> - 操作：按下停止後**等待至少 30 秒不做任何事**，然後切換到另一段對話。
> - 預期一（文字）：該對話存檔中，那則被停止的回覆，其文字**結尾是 `…（已停止）`**。
> - 預期二（時間）：該對話存檔中的最後更新時間，比切換的時刻早**至少 30 秒** —— 它應該落在按下停止的當下（或更早的串流期間），而不是切換的時刻。

兩點說明，免得他們誤以為我改了他們的東西：**預期二的數值與現行條文完全相同**（停止推進時間之後它依然成立），變的只是節名與括號裡的理由 —— 這一條真正守住的東西一直都是「**切換那一刻不得蓋掉時間**」，而那件事本輪沒有動。**預期一是新加的**，它是這一條第一次真的驗到「停止」而不只是驗到「切換」。

## 四、他們那條「只改時間值怎麼來，不改什麼時候寫檔」的範圍線

> **（v4）這條線現在住在哪裡**：`docs/specs/conversation-search/spec-tasks.md`／「明確不做」的「**時間戳這件事只改『寫下去的時間值怎麼來』，不改『什麼時候寫檔』**」。它原本是架構決策 §G.3，v3.11 整條搬過去，**規則的字面未變**；那一條底下現在也自己寫了「另一輪確實跨過了這條線，而兩邊的說法對得起來」。**下面保留當時的寫法（含 §G.3 這個節號），因為它記的是當時的判斷。**

（**與 S1 無關，結論與 v1 相同，未變動。**）§G.3 寫著「本輪只改『寫下去的時間值怎麼來』，不改『什麼時候寫檔』」，並註記這條線會被本輪跨過。**兩邊的說法對得起來，理由如下，他們不需要改 §G.3 的字面：**

- §G.3 劃的是**他們那一輪**的修正邊界，而且理由是「動存檔時機會影響一條與搜尋無關、而且正在正常運作的路徑」。
- 本輪要動的存檔時機**恰恰是那條沒有在正常運作的**（B2：停止那一次根本沒寫檔）。§G.3 保護的「正在正常運作的路徑」是切換對話時的存檔，**本輪不動它**（見「修正範圍」的排除項），而 R6 正是為了保證不動到它而存在的驗收。
- 換句話說：兩輪加起來，「什麼時候寫檔」只被改了一處 —— 停止那一次從「不寫」變成「寫」。除此之外沒有任何存檔時機改變。

---

# 修正範圍

## 修到哪裡算修好

1. 生成結束時「這則回覆最後留下什麼文字」由**一個地方**決定，而且它必須認得五種結束方式：正常完成、長度上限、重複迴圈、**使用者停止**、失敗。目前前三種寫在一處、第五種寫在另一處、第四種根本沒有被表達過 —— B1 就是這麼來的。
2. 使用者停止不再被當成失敗（R1、R2、R4）。
3. 停止之後那則回覆的狀態必須收斂（R3）。
4. 停止那一次必須落盤，而且寫的是被停止的那一段（R5、R6、R10）。
5. 上面那個「留下什麼」的決定，**必須能被一個不依賴 Android 環境的測試直接呼叫**（理由見下）。

## 為什麼不該再多修

- **不改真正的錯誤怎麼呈現**（R7）。錯誤訊息的文案、格式、要不要可重試，全部不在本輪。
- **不改兩種自動中斷的任何一個字**（R8）。它們走的不是取消那條路，本輪碰不到它們，碰到就是修過頭。
- **不改切換對話／人格／模型時既有的那次存檔。** 那條路正在正常運作，而且 `docs/specs/conversation-search/spec-tasks.md`／「明確不做」的「**時間戳這件事只改『寫下去的時間值怎麼來』，不改『什麼時候寫檔』**」明確把它劃在保護範圍內。**（v4 更新指法）** 那一條原本是他們的架構決策 §G.3，後來整條搬進「明確不做」，**§G.3 這個節號在那份文件裡已經不存在** —— 所以這裡改用檔名加那一條的開頭句定位。
- **不為了測試把引擎或儲存改成可注入、不引入 mock 框架、不新增 UI 測試。** 這會把一個兩處的 bug 修正變成一次架構改造。「能被不依賴 Android 的測試直接呼叫」這條性質，用既有的純邏輯分層就達得到（專案已經有數塊不依賴 Android 的純邏輯，各自有對應的 JVM 測試）—— 但**怎麼達到是 RD 的判斷**，我只要求那條性質成立。
- **不改比較畫面**（理由見「明確不做」）。

## 對測試的要求（性質，不是做法）

- 必須有一個**會被專案標準測試指令執行到**的測試，輸入是「已經生成的部分文字 + 這次生成是因為使用者停止而結束」，斷言結果文字**完整相等**於 R2 所要求的字串（不是 `contains`、不是「不為 null」）。
- 同一組測試必須同時涵蓋另外四種結束方式，其中「失敗」那一種必須斷言仍然產生錯誤字樣（這是 R7 的自動化守門）。
- 這個測試**不得依賴 Android 環境**。
- **我不確定、也不規定的**：這塊決定要放在哪、叫什麼、是函式還是別的形狀。若 RD 判斷加一個測試專用的相依（例如協程測試工具）更划算，那也是可接受的達成方式 —— 只要上面三條性質成立。

---

# 明確不做

| 不做的事 | 為什麼 | 什麼時候回來處理 |
|---|---|---|
| **比較畫面（`CompareScreen` / `CompareViewModel`）的停止行為** | 它有同一類缺陷（見「已知衝突與邊界情況」最後一項），但：(a) 本輪回答的核心問題「這段對話留下什麼」在那裡沒有對應物 —— 比較結果不落盤，離開畫面就沒了，**沒有資料遺失風險**；(b) 真要修好它得先回答第二個產品問題（停止時**還沒輪到**的那幾個模型該顯示什麼），會把兩個 bug 的一輪撐成四個決策的一輪。 | 使用者回報在比較畫面按停止後看到英文例外字串；或下一輪有任何理由要動 `CompareViewModel`。屆時把本輪的 R1 原樣套過去。 |
| **串流途中直接離開 App（不按停止）的資料遺失** | 這是另一個入口的同一類問題，但它的正確行為要先回答「App 被系統回收時該保住什麼」，那超出本輪。本輪的修正**可能**順帶改善它（收尾區塊變成會執行），但我不把它寫成要求，因為沒有可靠的判定方式。 | 使用者回報「切出去再回來，剛才的回覆不見了」。 |
| **錯誤訊息的文案與可重試性** | R7 明確要求維持現狀。改文案是需求變更，不是這個 bug。 | 有人明確提出要改錯誤呈現時。 |
| **停止之後「續寫」或「重新生成」** | 本輪只回答「留下什麼」，不新增能力。 | 使用者提出需求時。 |
| **部分文字結尾可能有壞字（多位元組字元被切在片段邊界）** | 停止時那份權威的一次解碼永遠不會抵達（見「診斷」末段），這是機制上的限制，不是這次要修的東西。R2 要求「留下畫面上已顯示的文字」，已經是可得的最好結果。 | 引擎換掉、或串流片段改成可累積解碼時。 |
| **`plan/architecture.html` 以外的文件** | `conversation-search` 目錄下的檔案由那一輪的 PM 維護；本輪只產出結論（見上一節）。**例外：`docs/product/features.md` 歸 PM 維護、跨輪共用一份，本輪有動它**（把兩項與比較畫面停止有關的「未經查證」標記換成已查證，見 `changes-v3.md`）。**（v4）本輪一個字都沒有動它** —— 當時另一輪的 PM 正在處理那份跨 slug 的單一份文件，本輪只核對了兩件事：那兩項標記確實已經拿掉、且它指向本規格的引用（R2、R3、R4、R5、R7、R8、R9、任務 4 驗收 4、「明確不做」比較畫面那一列、`spec-appendix.md` 的查證事實）在 v4 之後仍然都指得到。**（v5）同樣一個字都沒有動它**（本輪又有另一位 PM 正在處理那份文件），只核對了一件事：它指向本規格的引用寫的是「slug 目錄 + 檔名 + 規則代號與名稱」、不帶版號，而 R 編號與名稱本輪未變，所以仍然指得到。 | 不適用。**但有一項一直沒被處理的轉交事項**：那份文件的「「※未經查證」是什麼意思」那一節仍寫著「沒有實機跑過」，驗收環境換成模擬器之後這個說法會誤導。`changes-v4.md` 與 `changes-v5.md` 都列了，等動到那份文件的人處理。 |
| **（v3 新增）修正「重複的尾巴收成兩輪」這句敘述** | 架構文件與重複偵測那塊程式的註解都寫「收成兩輪」，實際保留的是三輪（`abababab` → `ababab`）。**這是本輪之前就存在的敘述誤差，不是本輪造成的**；而 R8 要求兩種自動中斷維持現狀，本輪去動那一段就是修過頭。**這一條只有敘述要改，行為不該改** —— 若有人主張改的是實作（真的收成兩輪），那是行為變更，要先有人決定。 | 下一輪有任何理由要動重複迴圈那段程式、或要動架構文件描述重複迴圈的那幾處時，順手把敘述改成與實作相符。 |
| **（v3 新增）改寫本輪那幾條「過程條文」** | QA 指出有幾條驗收要求的是「某個人做過某件事」（必須逐字核對過、由 RD 在本機做一次、與修改前逐字相同），**產物裡不存在可以拿來對照的東西**，QA 只能靠痕跡碰巧存在才判得下去。這個觀察成立，但那幾條對應的任務都已經執行並通過，**現在改寫它們不會改變任何已經發生的事**，只會讓已完成的條文與已完成的驗證對不起來。**（v4）這個判斷在 S2 拍板之後仍然成立** —— 裁決本身就寫明「本輪已完成的那三條不改寫，這個裁決只約束以後怎麼寫」。 | **（v4 更新，S2 已拍板為 (B)）** 下一輪要寫同型條文的時候 —— **不禁止寫**，但條文本身必須寫清楚三件事：**由誰執行、QA 驗得到什麼、驗不到什麼**。完整裁決與寫法要求在 `spec-appendix.md`／決策歷程。**另一個觸發**：任務 1 或任務 5 因為任何理由要**重做**時 —— 重做之前先把它底下那幾條改成上面那個寫法，否則重驗的人會再一次以為自己驗過了。 |

---

# 任務拆解

## 任務 1：把「這則回覆最後留下什麼」收到一個地方，並讓它能被 JVM 測試直接呼叫

- **說明**：生成結束時決定最終文字的邏輯目前散在兩處（正常收尾的標記處理、以及接住所有例外的那一處），而「使用者停止」這種結束方式從來沒有被表達過。把這個決定收成單一個地方，讓它認得五種結束方式：正常完成、長度上限、重複迴圈、使用者停止、失敗。**名稱、位置、形狀由 RD 決定**，唯一的硬性性質是它不依賴 Android 環境，因而能被 JVM 測試直接呼叫。
- **對應功能模組**：純邏輯層（與文字修復、重複偵測、Markdown 解析、搜尋比對同層）。
- **驗收標準**：
  1. 存在一個測試，輸入為「部分文字 + 使用者停止」，**斷言完整字串相等**於 R2 所要求的結果；該測試在專案標準測試指令下會被執行。
  2. **重現案例已成為永久測試**：上述測試中至少有一個案例的輸入直接取自 `../findings.md` 的重現情境（一段已經串流出來的長回覆文字 + 使用者停止），且該測試檔案中以註解指回 `docs/specs/stop-generation/findings.md`。
  3. 同一組測試涵蓋另外四種結束方式；其中「失敗」那一種斷言結果仍含錯誤字樣（守住 R7）。
  4. 這些測試不依賴 Android 環境（讀程式碼可判定：不 import Android/Compose/持久化層）。
  5. 把該地方對「使用者停止」的預期結果改回舊行為（錯誤字串），驗收 1 的測試必須變紅。**（這一條由 RD 在本機做一次即可，回報結果；目的是證明測試真的釘住了它，而不是恰好通過。）**

## 任務 2：使用者停止不再走錯誤那條路，且停止後狀態收斂

- **說明**：讓「使用者停止」這種結束方式接上任務 1 的決定，不再落進錯誤處理；並保證停止之後那則回覆不再變動、不再處於「還在生成」的樣子。
- **對應功能模組**：聊天狀態層（`chat/ChatViewModel.kt` 的送出／停止路徑）。
- **驗收標準**：
  1. 照 `../findings.md` 的重現步驟 1–4 操作，**該則回覆不再變成「出錯了：…」**，且滿足 R1 的字串禁止清單。
  2. 滿足 R2，三點全部要判（**S1 已拍板，不再有「待裁決、不判 fail」的部分**）：
     - (a) 停止後那則回覆的文字**結尾正好是** `…（已停止）`（一個刪節號字元 + 全形括號，共 6 個字元）。
     - (b) 把結尾那 6 個字元去掉之後，剩下的文字與「按停止前一刻的畫面截圖」**逐字相同**（不多、不少、不換行、不去尾端空白）。這一條同時擋掉標記被追加兩次的情況。
     - (c) 標記與前文之間**沒有**多出空白或換行。
  3. 滿足 R3：停止後 5 秒內文字不再改變，打字指示器消失，輸入列回到送出鈕。
     - **（v5）判定不變，但這一條的既有「通過」只在實機上取得過**（2026-09-09），S3 已拍板不在模擬器上重跑。**它是本規格唯一一條會因為裝置速度而可能翻面的驗收** —— fail 時怎麼歸類（環境差異 vs. 本輪改壞）見 R3 底下那段註記。
  4. 滿足 R4：在出現任何字之前按停止 → 不留下空白泡泡，使用者剛送出的訊息還在。
  5. 滿足 R9：停止後立刻送出下一則訊息，能正常得到回覆。
  6. 滿足 R7：本輪修改後，非取消的失敗仍顯示錯誤訊息（以任務 1 驗收 3 的測試為準，**在裝置上不強制重現**）。**（v4 措辭）** 原本寫「實機不強制重現」。不強制的理由與裝置是實機還是模擬器無關：**在裝置上自然觸發一次真正的推論失敗沒有可靠做法**，所以這一條的判定一直都在 JVM 測試那一層。

## 任務 3：停止那一次必須落盤，而且寫的是被停止的那一段

- **說明**：讓停止之後的結果在當下就進入儲存體，不必等下一個動作；並保證那次寫入的對象是被停止的那段對話。
- **對應功能模組**：聊天狀態層與資料層之間的那條既有存檔路徑（不新增第二條）。
- **驗收標準**：
  1. **重現案例已成為永久驗收**：照 `../findings.md` 重現步驟 5 執行 `adb shell run-as com.example.demo ls files/conversations | wc -l`，停止後的檔案數必須比送出訊息前多 1（原本的失敗現象是「完全沒有增加」）。
  2. 滿足 R5 預期二：停止後立刻 `am force-stop` 再開 App，該段對話仍在，且部分回覆文字與停止時相同。
  3. 滿足 R6：串流途中切到另一段既有對話 → 被切走那段的檔案含部分回覆；**被切入那段的檔案位元組與切換前完全相同**。
  4. 滿足 R10：串流途中切換人格、切換模型、開新對話，三種各驗一次 —— 被切走的那段都留下部分文字（非錯誤訊息）且已落盤。
  5. 停止一段**只有開場白、使用者一句話都沒說**的對話不可能發生（停止只在生成中可按），因此不需要驗；**但若 RD 的做法讓停止有可能在沒有使用者訊息時觸發，必須回報**，那會改變空白對話不落檔這條既有行為。

## 任務 4：回歸驗證

- **說明**：本輪動的是既有程式最熱的一條路徑（送出 → 串流 → 收尾 → 存檔），周邊全是正在正常運作的行為。**凡是動到程式的那一輪，這一條必做。**
  - **（v5 措辭修正，驗收標準一個字都沒有改）** 原本寫「這一條**每輪必做**」。使用者於 2026-09-16 裁決 S3 為「**不重跑**」時一併定下了重驗的觸發條件：**只有在程式再被動到時才重驗**（見 `spec-appendix.md`／決策歷程「已拍板：S3」）。純文件輪（例如 v4、v5 都沒有任何實作改動）照舊寫法會要求跑一次完整回歸，那與裁決直接牴觸，所以把條件寫明。**「動到程式」包含主程式與測試程式的任何改動。**
- **對應功能模組**：全部受影響路徑。
- **驗收標準**：
  1. 正常送出並等到回覆自然結束：文字正確、對話落盤、抽屜歷史中該段排到最前。
  2. 滿足 R8：長度上限的 `…（已達長度上限）` 與重複迴圈的 `…（模型卡在重複迴圈，已中斷）` 一字未改，且兩者仍會觸發。
  3. 非串流狀態下切換人格、切換模型、切換對話、開新對話、刪除對話，全部照常。
  4. 冷啟動仍回到上次停留的那段對話；上次停留的是一段從未存檔的空白對話時，仍以記住的模型開新的。
  5. 搜尋功能不受影響：查得到還沒存檔的對話與正在串流的回覆；**停止之後那則部分回覆的文字必須搜得到**。
  6. `docs/specs/conversation-search/spec.md` 的 §8.3「可判定（排序不因為「看一眼」而改變）」與 §8.4「可判定（儲存體裡的時間不動）」兩條仍通過（切過去看一眼、切走，時間與排序不變；儲存體裡的時間不動）。**（v4 補上節名）** 只寫節號時，對方重新編號會讓這一條靜靜地指到別的地方；節名對不上則是當場 grep 不到。
  7. **除本輪新增之外，專案既有的 JVM 測試全部通過**（一支都不得變紅、也不得被停用或刪除）。
     - **（v3 措辭修正）** 這一條原本寫「既有的**四支** JVM 測試」。別的輪次加了一支測試之後，那個數字自己就變錯了，而沒有任何人會發現 —— 本條真正依賴的是「既有的都還是綠的」，不是它們有幾支，所以不再寫死數量。
  8. **比較畫面：現況記錄，不是修正。** 在比較畫面執行一次生成並按下停止，**把畫面上實際出現的字串原樣記錄下來**（截圖或逐字抄錄），交給 PM 補進 `spec-appendix.md`。判定：記錄存在即 pass；**畫面顯示什麼都不判 fail**（本輪不修它）。
     - **（v3）這一條已經執行完畢**，量到的字串已補進 `spec-appendix.md`／「我查證過、值得記下來的事實」中關於比較畫面的那一項。**不需要再做一次。**

## 任務 5：更新架構文件

- **現行結論（v5 核對）：`plan/architecture.html` 本輪不需要任何改動，實際上也一個字都沒有動。** 三個理由：(a) v5 沒有任何程式碼改動，文件描述的行為一個字都沒有變；(b) 本輪唯一的實質內容是 S3 的裁決（已經通過的裝置端驗收不在新環境重跑），那是**驗收流程**的決定，架構文件不描述驗收流程 —— 它唯一提到裝置的地方是頁尾那句效能量測環境，那是「這些數字是在哪裡量的」的歷史標註，本來就該保留原文；(c) 下面六條驗收在 v3 都已執行並通過，**本輪不要再做一次**。
- **（v5 核對時順帶確認，不是新的待辦）** 架構文件裡描述停止生成的四個地方（訊息生命週期那張圖的 `aria-label`、圖內邊標、圖下方的文字說明、模組地圖裡狀態層與純邏輯層各一列）**目前都已含「使用者按下停止」這條分支**，與本規格一致。這一句是核對的結果，不是要求任何人再做一次。
- **（歷史，不是現行待辦）當初的結論：需要更新。** `plan/architecture.html` 有四處會因 S1 拍板與本次修正而過期或不足，下面六條就是當時的驗收標準，已於 v3 全部通過。**留著是因為下一次有人動到停止生成的行為時，要照同一組標準再走一遍。**
- **對應功能模組**：文件。
- **驗收標準**：
  1. 「一則訊息從送出到存檔」那張圖的圖說（現行只描述兩種提早中斷）**補上第三條分支：使用者按停止**，並說明它與另兩種的差別（取消整個工作 vs. 讓串流收束）。
  2. 圖下方那行「Flow 收束時透過 awaitClose 取消生成，與『停止』按鈕共用同一條路徑」在修完之後仍成立與否，**必須逐字核對過**；若已不成立就改寫。
  3. 「幾條刻意維持的規則」那一節裡，開頭是「**對話的『最後更新時間』只跟著內容走。**」的那一條：**把「按下停止」從「不算」那一側移除**，其餘一字不動。**S1 已拍板，這一條現在是確定的、必做的。**
     - 修改後那句必須是：「…新增訊息、訊息文字改變、訊息被移除才算一次更新；切過去看一眼、切走都不算。否則…」
     - 可判定：(i) 該句不再含「按下停止」四個字；(ii) 句首的原則（「只跟著內容走」）與句尾的理由（「否則『最近』會變成『最近被看過』…」）**與修改前逐字相同**；(iii) 「不算」那一側只剩「切過去看一眼、切走」兩項。
     - **不得**在這一條裡另外補一句「按下停止算一次更新」。理由與 `conversation-search` §8.1 那邊相同：句首已經列舉「訊息文字改變、訊息被移除」，停止必然落在其中之一（R11），再補一句只會多一處要跟著 R2／R4 一起維護的敘述。**若 RD 判斷不補會讀不懂而想補，可以補，但補的內容不得與 R4 衝突**（零文字時是「訊息被移除」，不是「文字改變」）。
     - **這一條刻意不寫行號**：行號會漂移，一律以句子內容定位。
  4. 模組地圖中 `chat/ChatViewModel.kt` 那一列的職責描述（現為「…長度上限與迴圈中斷、存檔…」）**補上使用者停止與停止當下的存檔**。
  5. 若任務 1 產生了新的純邏輯區塊：模組地圖**新增對應的一列**，且該表下方那句「每支測試各對應一塊純邏輯」的說明必須跟著改（**它寫死了一個數字，新增一列之後那個數字就是錯的**；改成幾由現況決定，本規格不寫死）。
  6. 更新過程中若發現文件其他地方與程式碼不符，**列出來回報**（本輪不要求一併修，除非改動極小）。

---

# 已知衝突與邊界情況

**這一節是「這個修法可能誤傷什麼」。每一條都指向上面某條驗收。**

1. **停止之後補寫的那次檔，可能寫到別段對話上。**（→ R6 / 任務 3 驗收 3）修好 B2 之後，收尾區塊會真的執行，而它執行的時機不完全可預測。若它寫入的對象是「當下開著的那段對話」，在「串流中切換對話」的情況下就會寫錯人。**更隱蔽的一種**：被切入的那段是從磁碟讀出來的，而讀取時會對文字做一次修復 —— 把它原樣再寫回去，檔案內容可能與原本不同位元組（尤其是舊對話），這會讓 `conversation-search` §8.4「切換前後存檔內容應完全相同」誤判為 fail。**把寫入對象固定成「被停止的那一段」可以一次消掉整類問題**，但怎麼做由 RD 決定。

2. **停止之後可能還有最後一個片段落地。**（→ R3 / 任務 2 驗收 3）停止與串流的最後一次寫入是兩件同時在跑的事。舊程式因為錯誤訊息會無條件覆寫並關掉「還在生成」，反而把這個問題蓋住了；**拿掉那次覆寫之後，這個問題會露出來** —— 可能出現「文字在停止之後又多了一小段」或「那則回覆永遠停在還在生成的樣子（打字指示器不消失）」。這是本輪最可能出現的新故障，R3 就是為它寫的。

   **（v5）這個競爭目前只在實機上被觀察過。** v3 的全驗（2026-09-09、Pixel 9 實機）判定 R3 通過，代表在那台裝置的速度下，停止贏了這場競爭。**驗收環境此後改成模擬器，而 S3 已拍板不重跑** —— 使用者知情接受的代價就是這一條：**換一台推論速度不同的裝置，勝負可能是反過來的，而沒有人看過。** 下一輪若在模擬器上看到 R3 fail，**第一個假設應該是「這個競爭在這台裝置上是反過來的」，不是「這一輪改壞了」**（除非這一輪真的動過程式）。

3. **收尾區塊裡的其他動作也會跟著恢復執行。**（→ 任務 4）修好 B2 之後，原本一起被跳過的「重新載入歷史」「記住工作階段」也會執行。預期是無害的，但它們會在停止之後造成一次抽屜歷史刷新；若停止是切換對話的一部分，這次刷新與切換自己的刷新會前後發生兩次。驗收上要確認抽屜內容正確、不重複、不缺項。

4. **R4 移除那則空回覆，會讓下一則訊息的上下文出現兩個連續的使用者發言。** 現行每次送出都必然留下一則助理訊息，所以這個形狀從來沒出現過。我讀過提示詞的組法：兩個連續的使用者回合會被原樣渲染成兩個 user 區塊 —— 語法上不會壞，但那不是模型訓練時看到的形狀，**回答品質可能略有變化**。這是我為了避免空白泡泡而接受的代價，寫在這裡讓 RD 知道它存在。若實測發現明顯異常，回報，我改 R4。

5. **（v3 現行狀態：這條跨輪相依已經解決，不再有相反宣稱。）** `conversation-search` 那一輪已經自行把 §8.2 的那一項整條移除、把 §8.6 換成會驗中斷標記的版本（現行節名：`docs/specs/conversation-search/spec.md` §8.6「可判定（停止之後的切換不得再推進時間）」），與本輪的 R11 一致。**QA 現在不會再在兩份文件之間讀到互相矛盾的說法**；下面保留的是這條相依當初的樣子與處置理由（**歷史記錄，不是現行狀態**）。

   **（歷史）`conversation-search` 的 §8.6 在修好之後仍然會通過，但它驗的不是它以為在驗的東西，而且它的節名當時是假的。**（→ 「對 conversation-search 的影響」第三節）本輪不動他們的檔案，所以 QA 手上那一輪的文件在他們的 PM 改之前仍寫著「停止生成不算」。**QA 要知道兩件事**：(a) §8.6 通過**不代表**本輪的 R11 成立（時間差是次秒級，那條判定分不出來）；(b) S1 拍板後，§8.6 括號裡的「停止生成不算」與本輪的 R11 直接相反 —— **以本輪的 R11 為準**，並把 §8.6 那一條記為「等對方改」，不要拿它去 fail 本輪。

6. **比較畫面有同一類缺陷 —— 這一點現在是量出來的，不再是推論。** 我讀過 `compare/CompareViewModel.kt`：它的停止會先把進行中的那一列標成「已取消」，但同一個工作裡也有一個接住所有例外的區塊 —— 取消同樣會被它接住並把 `已取消` 覆寫成例外訊息；而且迴圈會繼續往下跑，**還沒輪到的那幾個模型也會各自被標成失敗**。**任務 4 驗收 8 已經在實機上量過，結果與這段推論一致（含「還沒輪到的模型也被標成失敗」）**，量到的實際字串記在 `spec-appendix.md`／「我查證過、值得記下來的事實」。**本輪仍然不修它**（理由見「明確不做」第一列），這一條留在這裡是因為它是「同型缺陷還活著」的記錄。

---

**接下去讀哪裡**：待裁決事項在 `spec-decisions.md`（**目前 0 項**）；決策歷程（含 S1、S2、S3 各自的選項與代價）、已知取捨、查證過的事實與參考資料在 `spec-appendix.md`；重現步驟與原始診斷在 `../findings.md`；**最近一次的驗證結果在 `../v3/test-report.md`**（報告留在它驗的那一版，環境是實機 —— 見 R3 底下那段註記）；**每一輪改了什麼、那一輪要做哪些**在 slug 根目錄的 `changes-v<版本>.md`（最新的是 `changes-v5.md`）。
